# HistomicsStream

./: .git-blame-ignore-revs  .gitignore  README.md  StudyObject.md  Zarr Size Comparison.ipynb  pyproject.toml  setup.py  superpixel.ipynb  wsi_reader.ipynb
.github/workflows/: build-test-package.yml
example/: TA232-source.md  Zarr Size Comparison.ipynb  performance-EfficientNetV2S.py  performance-EfficientNet_V2_S_Weights.IMAGENET1K_V1.py  performance-detection.py  performance-mnist.py  pytorch_stream.ipynb  superpixel.ipynb  tensorflow_stream.ipynb  wsi_reader.ipynb
histomics-stream/: __init__.py  codecs.py  ds-init.py  dsm-chunk.py  dsm-wsi.py  histomics-stream.py  pyproject.toml
histomics_stream/: __init__.py  codecs.py  configure.py  pytorch.py  tensorflow.py
histomics_stream/dataset/: __init__.py  construction.py
histomics_stream/dataset_map/: __init__.py  chunk.py  generic.py  slide.py  study.py
histomics_stream/ds/: init.py
histomics_stream/dsm/: __init__.py  chunk.py  wsi.py
tensorflow_reader/: __init__.py  pyproject.toml  tensorflow_reader.py
test/: test_create_study.py  test_create_tensorflow_dataset.py  test_find_imports.py  test_find_itk.py  test_itk_found.py  test_mask.py
tfreader/: __init__.py  pyproject.toml  tfreader.py
