[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "histomics_stream"
readme = "README.md"
requires-python = ">=3.6"
authors = [{name = "Lee A. Newberg", email = "lee.newberg@kitware.com"}]
maintainers = [{name = "Lee A. Newberg", email = "lee.newberg@kitware.com"}]
keywords = ["tensorflow", "whole slide image", "stream", "machine learning"]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
    "imagecodecs",
    "itk",
    "numpy<1.24",
    "tensorflow",
    "torch",
    "zarr",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/DigitalSlideArchive/HistomicsStream"

[project.scripts]
flit = "flit:main"
