[build-system]
requires = [
         "flit_core >=2,<4",
         ]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
requires = [
         "h5py",
         "imagecodecs",
         "matplotlib",
         "napari-lazy-openslide",
         "numcodecs",
         "numpy",
         "openslide-python",
         "Pillow",
         "tensorflow-gpu",
         "tiffile",
         "zarr",
         ]
module = "histomics-stream"
author = "Lee Newberg"
author-email = "lee.newberg@kitware.com"
home-page = "https://github.com/DigitalSlideArchive/histomics-stream"
classifiers = ["License :: OSI Approved :: Apache Software License"]
